<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="184dp"
        android:autofillHints=""
        android:ems="5"
        android:hint=""
        android:inputType="textPersonName"
        android:text="@string/Add_no1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:hint="@string/Add_no2"
        android:ems="5"
        android:inputType="textPersonName"
        android:text="@string/Add_no2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_marginTop="92dp"
        android:text="@string/Total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button1"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:onClick="onClick"
        android:text="@string/sum"
        app:backgroundTint="#AEFA1C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.156"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button2"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:onClick="onClick"
        android:text="@string/sub"
        app:backgroundTint="#17E4C5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.154" />

    <Button
        android:id="@+id/button3"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:onClick="onClick"
        android:text="@string/mul"
        app:backgroundTint="#F6A10F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.154" />

    <Button
        android:id="@+id/button4"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:onClick="onClick"
        android:text="@string/div"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.154" />

    <Button
        android:id="@+id/home1"
        android:layout_width="125dp"
        android:layout_height="68dp"
        android:text="@string/home"
        app:backgroundTint="#74FFAF10"
        app:icon="@drawable/ic_baseline_home_24"
        app:layout_constraintBottom_toTopOf="@+id/editText1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372" />

</androidx.constraintlayout.widget.ConstraintLayout>
